# sbx

./: README.md
Linux/: README.md
Linux/05mod/: README.md  docker-compose.yml
Linux/05mod/app/: README.md  app.py
c++/hw09/: CMakeLists.txt  main.cpp
c++/hw10/: README.md  setup.py  test.py  vectoralgebra.cpp
hw05/: CMakeLists.txt  main.cpp
hw06/: CMakeLists.txt  main.cpp  readme
hw07/: CMakeLists.txt
hw07/app/: CMakeLists.txt  main.cpp
hw07/matrix/: CMakeLists.txt
hw07/matrix/src/: matrix.cpp  matrix.h
hw07/matrix/src/c/: c_api.cpp  c_api.h
hw08/: CMakeLists.txt
hw08/src/: main.cpp  snake.cpp  snake.h
linux/05mod/: Dockerfile
